testdata/invalid/invalid_const_invalid_guid.bop
const guid i = "guid-guid-guid";